--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.4",
     "core-js": "^3.6.4",
+    "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.5.4",
     "zone.js": "~0.10.2"
   },
