--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@capacitor/core": "1.5.0",
     "@capacitor/ios": "^1.0.0-beta.17",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/geolocation": "^5.36.0",
+    "@ionic-native/native-geocoder": "^5.36.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.4",
