--- a/package.json
+++ b/package.json
@@ -13,23 +13,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cdk": "^13.0.0",
+    "@angular/cdk": "^13.0.2",
     "@angular/common": "^9.0.0",
     "@angular/core": "^9.0.0",
     "@angular/forms": "^9.0.0",
     "@angular/platform-browser": "^9.0.0",
     "@angular/platform-browser-dynamic": "^9.0.0",
     "@angular/router": "^9.0.0",
-    "@capacitor/android": "^1.0.0-beta.17",
-    "@capacitor/cli": "1.5.0",
-    "@capacitor/core": "1.5.0",
+    "@capacitor/android": "^2.5.0",
+    "@capacitor/cli": "^3.3.2",
+    "@capacitor/core": "^3.3.2",
     "@capacitor/ios": "^1.0.0-beta.17",
+    "@capacitor/splash-screen": "^1.1.6",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/geolocation": "^5.36.0",
     "@ionic-native/native-geocoder": "^5.36.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^5.0.4",
+    "@ionic/angular": "^5.9.1",
     "core-js": "^3.6.4",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.5.4",
@@ -59,7 +60,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~8.6.2",
     "tslint": "~6.0.0",
-    "typescript": "^3.7.7"
+    "typescript": "^3.8.3"
   },
   "description": "An Ionic project"
 }
