--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "types": [],
     "noImplicitAny": true,
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
