--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@angular/router": "^9.0.0",
     "@capacitor/android": "^2.5.0",
     "@capacitor/cli": "^3.3.2",
-    "@capacitor/core": "^3.3.2",
-    "@capacitor/ios": "^1.0.0-beta.17",
+    "@capacitor/core": "^2.5.0",
+    "@capacitor/ios": "3.3.2",
     "@capacitor/splash-screen": "^1.1.6",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/geolocation": "^5.36.0",
