--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.9.1",
+    "@ionic/pwa-elements": "^3.0.2",
     "core-js": "^3.6.4",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.5.4",
